--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <ReceiptTemplate data={printData} />
                     <header className="no-print bg-blue-800 text-white shadow-lg shrink-0 z-20 px-4 py-3 sm:py-4">
                         <div className="max-w-7xl mx-auto flex flex-col sm:flex-row justify-between items-center gap-4">
-                            <div><h1 className="text-lg sm:text-2xl font-bold flex items-center gap-3"><img src="logo.png" className="h-8 w-8 sm:h-10 sm:w-10 rounded-full shadow-md border-2 border-white object-cover" alt="Лого" /><span className="truncate">Учет "Қарақия"</span></h1></div>
+                            <div><h1 className="text-lg sm:text-2xl font-bold flex items-center gap-3"><img src="logo.png" className="h-8 w-8 sm:h-10 sm:w-10 rounded-full shadow-md border-2 border-white object-cover" alt="Лого" /><span className="truncate">Система Учета Редакции "Қарақия"</span></h1></div>
                             <div className="flex gap-2 sm:gap-4 bg-blue-900/50 p-2 rounded-lg text-xs sm:text-sm w-full sm:w-auto justify-around sm:justify-start">
                                 <div className="px-2 sm:px-3 border-r border-blue-700 text-center sm:text-left"><div className="text-blue-300">Всего</div><div className="font-bold text-base sm:text-lg">{stats.count}</div></div>
                                 <div className="px-2 sm:px-3 border-r border-blue-700 text-center sm:text-left"><div className="text-blue-300">Ожидается</div><div className="font-bold text-base sm:text-lg text-yellow-400">{(stats.total - stats.paid).toLocaleString()}</div></div>
@@ -486,3 +486,4 @@
     </script>
 </body>
 </html>
+
